update UI, UI test and deployment